--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <label for="romaneio">Sem Romaneio</label>
             </div>
             <label for="linha">Linha:</label>
-            <input class="inputs" type="text" id="linha" name="linha" required>
+            <input class="inputs" type="text" id="linha" name="linha" inputmode="numeric" required>
             <label for="mot">Motorista:</label>
-            <input class="inputs" type="text" id="mot" name="mot" required>
+            <input class="inputs" type="text" id="mot" name="mot" inputmode="numeric" required>
             <label for="veiculo">Veiculo:</label>
-            <input class="inputs" type="text" id="veiculo" name="veiculo" required>
+            <input class="inputs" type="text" id="veiculo" name="veiculo" inputmode="numeric" required>
             <label for="carreta">Carreta:</label>
-            <input class="inputs" type="text" id="carreta" name="carreta">
+            <input class="inputs" type="text" id="carreta" inputmode="numeric" name="carreta">
             <div id="divButton">
                 <input class="inputs" type="submit" value="Registrar" id="button">
             </div>        
